--- a/nextflow.config
+++ b/nextflow.config
@@ -14,23 +14,23 @@ params {
     // RAM in Mb
     ramm=300000
     // PATH to run analysis
-    mypwd="/home/rrivera/fabian"
+    mypwd="CHANGE"
     // Uniport database PATH
-    uniprot="/home/rrivera/ncgas_pipeline/UniProt_metazoa/uniprot-taxonomy_metazoaA33208.fasta"
+    uniprot="CHANGE/uniprot-taxonomy_metazoaA33208.fasta"
     uniname="uniprot-taxonomy_metazoaA33208.fasta"
-    // kmers list
-    k="25,31,37"
+    // kmers list (depends on read length)
+    k="25,37,45,53"
     // Directory for trace files
     tracedir="pipeline_info"
 
     // SOAP config file generator
     //#maximal read length
-    max_rd_len="50"
+    max_rd_len="76"
     //[LIB]
     //#maximal read length in this lib
-    rd_len_cutof="50"
+    rd_len_cutof="76"
     //#average insert size
-    avg_ins="400"
+    avg_ins="200"
     //#if sequence needs to be reversed 
     reverse_seq="0"
     //#in which part(s) the reads are used
@@ -41,34 +41,30 @@ params {
     // --------------------------- Do not modify anything below this --------------------------- //
     // Programs not listed here are assume to be in the PATH
     //insilico_read_normalization
-    in_norm="/home/rrivera/ncgas_pipeline/trinityrnaseq/util/insilico_read_normalization.pl"
+    in_norm="insilico_read_normalization.pl"
     //soap variable
-    soap="/home/rrivera/ncgas_pipeline/SOAPdenovo-trans/SOAPdenovo-Trans-127mer"
-    //Config files of soap
-    conf="/home/rrivera/ncgas_pipeline/SOAPdenovo-trans"
+    soap="SOAPdenovo-Trans-127mer"
     //velvet and oases variable
-    vh="/home/rrivera/ncgas_pipeline/velvet/velveth"
-    vg="/home/rrivera/ncgas_pipeline/velvet/velvetg"
-    oa="/home/rrivera/ncgas_pipeline/oases/oases"
-    //transabyss variable
-    ta="/home/rrivera/ncgas_pipeline/transabyss-2.0.1/transabyss"
+    vh="velveth"
+    vg="velvetg"
+    oa="oases"
     //trinity variable
-    tr="/home/rrivera/ncgas_pipeline/trinityrnaseq/Trinity"
+    tr="Trinity"
     //BUSCO databse (metazoa)
-    buscodb="/home/rrivera/mypaths/busco/metazoa_odb9"
+    buscodb="CHANGE/metazoa_odb9"
     //Rnammer script from Trinotate
-    rnaTri="/home/rrivera/ncgas_pipeline/Trinotate/util/rnammer_support/RnammerTranscriptome.pl"
+    rnaTri="RnammerTranscriptome.pl"
     //To extract from XML file
-    XMLtoGO="/home/rrivera/ncgas_pipeline/Trinotate/util/extract_GO_assignments_from_Trinotate_xls.pl"
+    XMLtoGO="extract_GO_assignments_from_Trinotate_xls.pl"
     //PFAM file location (gunzip first)
     //Check constantly for updates of pfam:ftp://ftp.ebi.ac.uk/pub/databases/Pfam/releases/"
-    pfloc="/home/rrivera/ncgas_pipeline/TransDecoder/pfam/Pfam-A.hmm"
+    pfloc="CHANGE/Pfam-A.hmm"
     //name of pfam file
     pfname="Pfam-A.hmm"
     //Trinotate sqlite created when installing Trinotate
-    Tsql="/home/rrivera/ncgas_pipeline/Trinotate/Trinotate.sqlite"
+    Tsql="CHANGE/Trinotate.sqlite"
     //rnammer
-    rnam="/home/rrivera/ncgas_pipeline/rnammer/rnammer"
+    rnam="PATH/rnammer"
 }
 
 timeline {
@@ -111,6 +107,12 @@ process {
         cpus='20'
         memory='200 GB'
         clusterOptions='-p lemmium --qos=normal'
+        executor='slurm'
+    }
+        withLabel: med_mem2 {
+        cpus='16'
+        memory='93 GB'
+        clusterOptions='-p nitrogen --qos=normal'
         executor='slurm'
     }
     withLabel: low_mem {
