--- a/sample.nextflow.config
+++ b/sample.nextflow.config
@@ -60,7 +60,7 @@ params {
     //Check constantly for updates of pfam:ftp://ftp.ebi.ac.uk/pub/databases/Pfam/releases/"
     pfloc
     //name of pfam file
-    pfname="Pfam-A.hmm"
+    pfname
     //Trinotate sqlite created when installing Trinotate
     Tsql="CHANGE/Trinotate.sqlite"
     //rnammer
