--- a/sample.nextflow.config
+++ b/sample.nextflow.config
@@ -1,27 +1,20 @@
-/* ----------------------------------------
-
-                Config File
-
-   ----------------------------------------
+/*
+========================================================================================
+                                Config File TransPi
+========================================================================================
+                            Transcriptomes Analysis Pipeline
+                            Author: Ramon E. Rivera-Vicens
+                            Version: 1.0 (Palmuc)
+----------------------------------------------------------------------------------------
 */
 
 params {
 
-    // Modify this accordingly
-    cpus=10
-    // RAM in Gb
-    ramg=300
-    // RAM in Mb
-    ramm=300000
-    // PATH to run analysis
-    mypwd
-    // Uniport database PATH
-    uniprot
-    uniname
-    // kmers list (depends on read length)
+    // ------------------- EDIT this area only ------------------- //
+
+    // Modify this accordingly (if needed)
+    // kmers list (depends on read length!)
     k="25,37,45,53"
-    // Directory for trace files
-    tracedir="pipeline_info"
 
     // SOAP config file generator
     //#maximal read length
@@ -38,7 +31,42 @@ params {
     //#minimum aligned length to contigs for a reliable read location (at least 32 for short insert size)
     map_len="32"
 
+    //rnammer
+    rnam="PATH/rnammer"
+    //tmhmm
+    tmhmm
+    //signalP
+    signalp
+    //Trinotate sqlite created when installing Trinotate
+    Tsql="CHANGE/Trinotate.sqlite"
+
+    // Resources if not using an executor like SLURM
+    cpus=10
+    // RAM in Gb
+    ramg=300
+    // RAM in Mb
+    ramm=300000
+
+
+    // ------------------- STOP ------------------- //
+
+
     // --------------------------- Do not modify anything below this --------------------------- //
+
+    // PATH to run analysis
+    mypwd
+    // Uniport database PATH
+    uniprot
+    uniname
+    //BUSCO databse (metazoa)
+    buscodb
+    //PFAM file location (gunzip first)
+    //Check constantly for updates of pfam:ftp://ftp.ebi.ac.uk/pub/databases/Pfam/releases/"
+    pfloc
+    //name of pfam file
+    pfname
+    // Directory for trace files
+    tracedir="pipeline_info"
     // Programs not listed here are assume to be in the PATH
     //insilico_read_normalization
     in_norm="insilico_read_normalization.pl"
@@ -50,23 +78,19 @@ params {
     oa="oases"
     //trinity variable
     tr="Trinity"
-    //BUSCO databse (metazoa)
-    buscodb
     //Rnammer script from Trinotate
     rnaTri="RnammerTranscriptome.pl"
     //To extract from XML file
     XMLtoGO="extract_GO_assignments_from_Trinotate_xls.pl"
-    //PFAM file location (gunzip first)
-    //Check constantly for updates of pfam:ftp://ftp.ebi.ac.uk/pub/databases/Pfam/releases/"
-    pfloc
-    //name of pfam file
-    pfname
-    //Trinotate sqlite created when installing Trinotate
-    Tsql="CHANGE/Trinotate.sqlite"
-    //rnammer
-    rnam="PATH/rnammer"
+    //diamond
+    diam="diamond"
+    //HMMER
+    hmsc="hmmscan"
+    //TransDecoder.LongOrfs
+    torf="TransDecoder.LongOrfs"
+    //TransDecoder.Predict
+    tpred="TransDecoder.Predict"
 }
-
 timeline {
   enabled = true
   file = "${params.tracedir}/tranpi_timeline.html"
@@ -83,7 +107,6 @@ dag {
   enabled = true
   file = "${params.tracedir}/tranpi_dag.html"
 }
-
 process {
     withLabel: big_cpus {
         cpus='30'
