--- a/sample.nextflow.config
+++ b/sample.nextflow.config
@@ -32,13 +32,12 @@ params {
     map_len="32"
 
     //rnammer
-    rnam="PATH/rnammer"
+    rnam=""
     //tmhmm
-    tmhmm
+    tmhmm=""
     //signalP
-    signalp
-    //Trinotate sqlite created when installing Trinotate
-    Tsql="CHANGE/Trinotate.sqlite"
+    signalp=""
+
 
     // Resources if not using an executor like SLURM
     cpus=10
@@ -65,6 +64,8 @@ params {
     pfloc
     //name of pfam file
     pfname
+    //Trinotate sqlite created when installing Trinotate
+    Tsql
     // Directory for trace files
     tracedir="pipeline_info"
     // Programs not listed here are assume to be in the PATH
