--- a/sample.nextflow.config
+++ b/sample.nextflow.config
@@ -32,11 +32,11 @@ params {
     map_len="32"
 
     //rnammer
-    rnam=""
+    rnam="/home/ubuntu/pipe/rnammer/rnammer"
     //tmhmm
-    tmhmm=""
+    tmhmm="/home/ubuntu/pipe/tmhmm-2.0c/bin/tmhmm"
     //signalP
-    signalp=""
+    signalp="/home/ubuntu/pipe/signalp-4.1/signalp"
 
 
     // Resources if not using an executor like SLURM
