--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -38,13 +38,9 @@ params {
     //signalP
     signalp="/home/ubuntu/pipe/signalp-4.1/signalp"
 
-
-    // Resources if not using an executor like SLURM
-    cpus=10
-    // RAM in Gb
-    ramg=300
-    // RAM in Mb
-    ramm=300000
+    //conda path for sourcing
+    //Examples: ~/anaconda3/... or ~/tools/anaconda3/...
+    condash="~/anaconda3/etc/profile.d/conda.sh"
 
 
     // ------------------- STOP ------------------- //
