--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -39,8 +39,8 @@ params {
     signalp="/home/ubuntu/pipe/signalp-4.1/signalp"
 
     //conda path for sourcing
-    //Examples: ~/anaconda3/... or ~/tools/anaconda3/...
-    condash="~/anaconda3/etc/profile.d/conda.sh"
+    //Examples: ~/anaconda3... or ~/tools/anaconda3...
+    condash="~/anaconda3"
 
 
     // ------------------- STOP ------------------- //
