--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -10,7 +10,8 @@
 
 params {
 
-    // ------------------- EDIT this area only ------------------- //
+    // ------------------- EDIT this ------------------- //
+
 
     // Modify this accordingly (if needed)
     // kmers list (depends on read length!)
@@ -38,18 +39,19 @@ params {
     //signalP
     signalp="/home/ubuntu/pipe/signalp-4.1/signalp"
 
-    //conda path for sourcing
-    //Examples: ~/anaconda3... or ~/tools/anaconda3...
-    condash="~/anaconda3"
 
 
     // ------------------- STOP ------------------- //
 
 
+
     // --------------------------- Do not modify anything below this --------------------------- //
+
 
     // PATH to run analysis
     mypwd
+    // Reads directory
+    reads=/reads/*_R{1,2}.fastq.gz"
     // Uniport database PATH
     uniprot
     uniname
@@ -87,22 +89,35 @@ params {
     torf="TransDecoder.LongOrfs"
     //TransDecoder.Predict
     tpred="TransDecoder.Predict"
+
+
+    // Pipeline options
+    help = false
+    fullHelp = false
+    all = false
+    onlyAss = false
+    onlyEvi = false
+
 }
+
+// env Evidential Gene variable (only for nextflow)
+env.evi="$baseDir/evigene"
+
 timeline {
   enabled = true
-  file = "${params.tracedir}/tranpi_timeline.html"
+  file = "${params.tracedir}/transpi_timeline.html"
 }
 report {
   enabled = true
-  file = "${params.tracedir}/tranpi_report.html"
+  file = "${params.tracedir}/transpi_report.html"
 }
 trace {
   enabled = true
-  file = "${params.tracedir}/tranpi_trace.txt"
+  file = "${params.tracedir}/transpi_trace.txt"
 }
 dag {
   enabled = true
-  file = "${params.tracedir}/tranpi_dag.html"
+  file = "${params.tracedir}/transpi_dag.html"
 }
 process {
     withLabel: big_cpus {
@@ -129,7 +144,7 @@ process {
         clusterOptions='-p lemmium --qos=normal'
         executor='slurm'
     }
-        withLabel: med_mem2 {
+    withLabel: med_mem2 {
         cpus='16'
         memory='93 GB'
         clusterOptions='-p nitrogen --qos=normal'
@@ -141,4 +156,21 @@ process {
         clusterOptions='-p lemmium --qos=normal'
         executor='slurm'
     }
+    errorStrategy='finish'
 }
+profiles {
+    conda {
+        process.conda = "$baseDir/transpi_env.yml"
+    }
+    docker {
+        docker.enabled = true
+    }
+    singularity {
+        singularity.enabled = true
+        singularity.autoMounts = true
+    }
+    test {
+        includeConfig 'conf/test.config'
+    }
+}
+
