Check cbs-dtu-tools

--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -32,12 +32,7 @@ params {
     //#minimum aligned length to contigs for a reliable read location (at least 32 for short insert size)
     map_len="32"
 
-    //rnammer
-    rnam="/home/ubuntu/pipe/rnammer/rnammer"
-    //tmhmm
-    tmhmm="/home/ubuntu/pipe/tmhmm-2.0c/bin/tmhmm"
-    //signalP
-    signalp="/home/ubuntu/pipe/signalp-4.1/signalp"
+
 
 
 
@@ -57,7 +52,13 @@ params {
     uniname
     //BUSCO databse (metazoa)
     buscodb
-    //PFAM file location (gunzip first)
+    //rnammer
+    rnam
+    //tmhmm
+    tmhmm
+    //signalP
+    signalp
+    //PFAM file location 
     //Check constantly for updates of pfam:ftp://ftp.ebi.ac.uk/pub/databases/Pfam/releases/"
     pfloc
     //name of pfam file
@@ -173,4 +174,3 @@ profiles {
         includeConfig 'conf/test.config'
     }
 }
-
