--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -52,13 +52,13 @@ params {
     uniname
     //BUSCO databse (metazoa)
     buscodb
-    //rnammer
+    //RNAmmer
     rnam
-    //tmhmm
+    //Tmhmm
     tmhmm
-    //signalP
+    //SignalP
     signalp
-    //PFAM file location 
+    //PFAM file location
     //Check constantly for updates of pfam:ftp://ftp.ebi.ac.uk/pub/databases/Pfam/releases/"
     pfloc
     //name of pfam file
