--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -124,38 +124,38 @@ process {
     withLabel: big_cpus {
         cpus='30'
         memory='15 GB'
-        clusterOptions='-p lemmium --qos=normal'
-        executor='slurm'
+//        clusterOptions='-p lemmium --qos=normal'
+//        executor='slurm'
     }
     withLabel: low_cpus {
         cpus='6'
         memory='10 GB'
-        clusterOptions='-p lemmium --qos=normal'
-        executor='slurm'
+//        clusterOptions='-p lemmium --qos=normal'
+//        executor='slurm'
     }
     withLabel: big_mem {
         cpus='20'
         memory='350 GB'
-        clusterOptions='-p lemmium --qos=normal'
-        executor='slurm'
+//        clusterOptions='-p lemmium --qos=normal'
+//        executor='slurm'
     }
     withLabel: med_mem {
         cpus='20'
         memory='180 GB'
-        clusterOptions='-p lemmium --qos=normal'
-        executor='slurm'
+//        clusterOptions='-p lemmium --qos=normal'
+//        executor='slurm'
     }
     withLabel: med_mem2 {
         cpus='16'
         memory='93 GB'
-        clusterOptions='-p nitrogen --qos=normal'
-        executor='slurm'
+//        clusterOptions='-p nitrogen --qos=normal'
+//        executor='slurm'
     }
     withLabel: low_mem {
         cpus='20'
         memory='80 GB'
-        clusterOptions='-p lemmium --qos=normal'
-        executor='slurm'
+//        clusterOptions='-p lemmium --qos=normal'
+//        executor='slurm'
     }
     errorStrategy='finish'
 }
