Modify various processes, channels and variables

--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -81,7 +81,7 @@ params {
     //Rnammer script from Trinotate
     rnaTri="RnammerTranscriptome.pl"
     //To extract from XML file
-    XMLtoGO="extract_GO_assignments_from_Trinotate_xls.pl"
+    XLStoGO="extract_GO_assignments_from_Trinotate_xls.pl"
     //diamond
     diam="diamond"
     //HMMER
@@ -96,7 +96,6 @@ params {
     help = false
     fullHelp = false
     all = false
-    onlyAss = false
     onlyEvi = false
 
 }
