Add readsTest variable

--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -98,6 +98,8 @@ params {
     all = false
     onlyEvi = false
 
+    //Test data
+    readsTest = null
 }
 
 // env Evidential Gene variable (only for nextflow)
