--- a/conf/test.config
+++ b/conf/test.config
@@ -4,7 +4,7 @@
 ========================================================================================
                             Transcriptomes Analysis Pipeline
                             Author: Ramon E. Rivera-Vicens
-                            Version: 1.0 (Palmuc)
+                            Version: 1.0 (dev)
 ----------------------------------------------------------------------------------------
 */
  
@@ -12,6 +12,8 @@ params {
 
     cpus='4'
     memory='16 Gb'
-
+    // As an example. Need to modify the files.
+    readsTest = [
+        ['NAME_HERE', ['https://www.dropbox.com/s/0ixhtrwibt5yln1/stru_depth.fasta'], ['https://github.com/nf-core/test-datasets/raw/rnaseq/testdata/SRR4238355_subsamp.fastq.gz']]
+    ]
 }
-
