Add params for new assemblers

--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -78,6 +78,8 @@ params {
     oa="oases"
     //trinity variable
     tr="Trinity"
+    //rnaPSADES
+    sp="rnaspades.py"
     //Rnammer script from Trinotate
     rnaTri="RnammerTranscriptome.pl"
     //To extract from XML file
@@ -104,6 +106,8 @@ params {
 
 // env Evidential Gene variable (only for nextflow)
 env.evi="$baseDir/evigene"
+// env for transabyss
+env.trans="$baseDir/transabyss-2.0.1"
 
 timeline {
   enabled = true
