--- a/transpi_env.yml
+++ b/transpi_env.yml
@@ -9,6 +9,8 @@ dependencies:
   - python=3.6
   - trinity=2.8.4
   - soapdenovo-trans=1.04
+  - spades=3.14.0     
+  - transabyss=2.0.1  
   - velvet=1.2.10
   - oases=0.2.09
   - idba=1.1.3
@@ -22,7 +24,3 @@ dependencies:
   - perl-xml-simple=2.25
   - r-svglite=1.2.3
   - r-ggthemes=4.2.0
-  - python-igraph=0.8.0
-  - abyss=2.2.4
-  - blat=36
-  - spades=3.14.0
