Fix transabyss variable

--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -80,6 +80,8 @@ params {
     tr="Trinity"
     //rnaPSADES
     sp="rnaspades.py"
+    //TransABySS
+    ta="transabyss"
     //Rnammer script from Trinotate
     rnaTri="RnammerTranscriptome.pl"
     //To extract from XML file
@@ -106,8 +108,6 @@ params {
 
 // env Evidential Gene variable (only for nextflow)
 env.evi="$baseDir/evigene"
-// env for transabyss
-env.trans="$baseDir/transabyss-2.0.1"
 
 timeline {
   enabled = true
