--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -10,7 +10,7 @@
 
 params {
 
-    // ------------------- EDIT this ------------------- //
+    // ------------------- EDIT this variables only ------------------- //
 
 
     // Modify this accordingly (if needed)
@@ -24,7 +24,7 @@ params {
     //#maximal read length in this lib
     rd_len_cutof="76"
     //#average insert size
-    avg_ins="200"
+    //avg_ins="200"
     //#if sequence needs to be reversed
     reverse_seq="0"
     //#in which part(s) the reads are used
@@ -32,16 +32,11 @@ params {
     //#minimum aligned length to contigs for a reliable read location (at least 32 for short insert size)
     map_len="32"
 
+    // ----------------------------- STOP ----------------------------- //
 
+    // --------------------------- Do not modify variables below this line. --------------------------- //
 
-
-
-    // ------------------- STOP ------------------- //
-
-
-
-    // --------------------------- Do not modify anything below this --------------------------- //
-
+    // ----------------------------- Proceed to modify process if needed ------------------------------ //
 
     // PATH to run analysis
     mypwd
@@ -67,64 +62,15 @@ params {
     Tsql
     // Directory for trace files
     tracedir="pipeline_info"
-    // Programs not listed here are assume to be in the PATH
-    //insilico_read_normalization
-    in_norm="insilico_read_normalization.pl"
-    //soap variable
-    soap="SOAPdenovo-Trans-127mer"
-    //velvet and oases variable
-    vh="velveth"
-    vg="velvetg"
-    oa="oases"
-    //trinity variable
-    tr="Trinity"
-    //rnaPSADES
-    sp="rnaspades.py"
-    //TransABySS
-    ta="transabyss"
-    //Rnammer script from Trinotate
-    rnaTri="RnammerTranscriptome.pl"
-    //To extract from XML file
-    XLStoGO="extract_GO_assignments_from_Trinotate_xls.pl"
-    //diamond
-    diam="diamond"
-    //HMMER
-    hmsc="hmmscan"
-    //TransDecoder.LongOrfs
-    torf="TransDecoder.LongOrfs"
-    //TransDecoder.Predict
-    tpred="TransDecoder.Predict"
-
-
     // Pipeline options
     help = false
     fullHelp = false
     all = false
     onlyEvi = false
-
     //Test data
     readsTest = null
 }
 
-// env Evidential Gene variable (only for nextflow)
-env.evi="$baseDir/evigene"
-
-timeline {
-  enabled = true
-  file = "${params.tracedir}/transpi_timeline.html"
-}
-report {
-  enabled = true
-  file = "${params.tracedir}/transpi_report.html"
-}
-trace {
-  enabled = true
-  file = "${params.tracedir}/transpi_trace.txt"
-}
-dag {
-  enabled = true
-  file = "${params.tracedir}/transpi_dag.html"
-}
 process {
     withLabel: big_cpus {
         cpus='30'
@@ -164,6 +110,27 @@ process {
     }
     errorStrategy='finish'
 }
+
+// env Evidential Gene variable (only for nextflow)
+env.evi="$baseDir/evigene"
+
+timeline {
+  enabled = true
+  file = "${params.tracedir}/transpi_timeline.html"
+}
+report {
+  enabled = true
+  file = "${params.tracedir}/transpi_report.html"
+}
+trace {
+  enabled = true
+  file = "${params.tracedir}/transpi_trace.txt"
+}
+dag {
+  enabled = true
+  file = "${params.tracedir}/transpi_dag.html"
+}
+
 profiles {
     conda {
         process.conda = "$baseDir/transpi_env.yml"
