--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -45,7 +45,7 @@ params {
     // Uniport database PATH
     uniprot
     uniname
-    //BUSCO databse (metazoa)
+    //BUSCO database
     buscodb
     //RNAmmer
     rnam
