--- a/transpi_env.yml
+++ b/transpi_env.yml
@@ -13,7 +13,7 @@ dependencies:
   - transabyss=2.0.1
   - velvet=1.2.10
   - oases=0.2.09
-  #- busco=4.0.5 Not working properly with the env
+  #- busco=4.0.5 #Not working properly with the env
   - transdecoder=5.5.0
   - trinotate=3.2.0
   - diamond=0.9.30
