--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -46,7 +46,8 @@ params {
     uniprot
     uniname
     //BUSCO database
-    buscodb
+    busco3db
+    busco4db
     //RNAmmer
     rnam
     //Tmhmm
@@ -67,6 +68,7 @@ params {
     fullHelp = false
     all = false
     onlyEvi = false
+    onlyAnn = false
     //Test data
     readsTest = null
 }
@@ -112,7 +114,10 @@ process {
 }
 
 // env Evidential Gene variable (only for nextflow)
-env.evi="$baseDir/evigene"
+env.evi="$baseDir/scripts/evigene"
+
+// busco4 (only for nextflow)
+env.bus4="$baseDir/scripts/busco4"
 
 timeline {
   enabled = true
