--- a/transpi_env.yml
+++ b/transpi_env.yml
@@ -14,6 +14,7 @@ dependencies:
   - velvet=1.2.10
   - oases=0.2.09
   #- busco=4.0.5 #Not working properly with the env
+  - busco=3.0.2
   - transdecoder=5.5.0
   - trinotate=3.2.0
   - diamond=0.9.30
