Add busco4 param

--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -55,12 +55,13 @@ params {
     //SignalP
     signalp
     //PFAM file location
-    //Check constantly for updates of pfam:ftp://ftp.ebi.ac.uk/pub/databases/Pfam/releases/"
     pfloc
     //name of pfam file
     pfname
     //Trinotate sqlite created when installing Trinotate
     Tsql
+    //busco4 conda env
+    cenv
     // Directory for trace files
     tracedir="pipeline_info"
     // Pipeline options
