Add shortTransdecoder option

--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -72,6 +72,8 @@ params {
     onlyAnn = false
     //Test data
     readsTest = null
+    //short Transdecoder, no homlogy search PFAM and UniProt
+    shortTransdecoder = false 
 }
 
 process {
