Change structure. Add new variables. Default SLURM settings for PALMUC

--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -1,28 +1,29 @@
 /*
-========================================================================================
-                                Config File TransPi
-========================================================================================
-                            Transcriptomes Analysis Pipeline
-                            Author: Ramon E. Rivera-Vicens
-                            Version: 1.0 (Palmuc)
-----------------------------------------------------------------------------------------
+================================================================================================
+                                    Config File TransPi
+================================================================================================
+                                Transcriptome Analysis Pipeline
+                                Author: Ramon E. Rivera-Vicens
+                                Version: 1.0
+------------------------------------------------------------------------------------------------
 */
 
 params {
 
-    // ------------------- EDIT this variables only ------------------- //
-
+    // -------------------------  EDIT below variables (mandatory)  ------------------------- //
 
     // Modify this accordingly (if needed)
     // kmers list (depends on read length!)
-    k="25,37,45,53"
+    k=""
 
     // SOAP config file generator
     //#maximal read length
-    max_rd_len="76"
+    max_rd_len=""
     //[LIB]
     //#maximal read length in this lib
-    rd_len_cutof="76"
+    rd_len_cutof=""
+
+    // Other options if needed. Leave defaults if unsure.
     //#average insert size
     //avg_ins="200"
     //#if sequence needs to be reversed
@@ -32,16 +33,24 @@ params {
     //#minimum aligned length to contigs for a reliable read location (at least 32 for short insert size)
     map_len="32"
 
-    // ----------------------------- STOP ----------------------------- //
+    // --------------------------  EDIT below variables if needed  -------------------------- //
 
-    // --------------------------- Do not modify variables below this line. --------------------------- //
+    // Directory for results
+    outdir="results"
 
-    // ----------------------------- Proceed to modify process if needed ------------------------------ //
+    /*
+    // ------------------------------------     STOP     ------------------------------------ //
+    // ---------------------- Do not modify variables below this line. ---------------------- //
+    // ------------------------- Proceed to modify processes at end ------------------------- //
+    // -------------------------------        If nedded       ------------------------------- //
+    */
 
     // PATH to run analysis
     mypwd
-    // Reads directory
+    // Directory for reads
     reads=/reads/*_R{1,2}.fastq.gz"
+    // Directory for trace files
+    tracedir="pipeline_info"
     // Uniport database PATH
     uniprot
     uniname
@@ -62,56 +71,75 @@ params {
     Tsql
     //busco4 conda env
     cenv
-    // Directory for trace files
-    tracedir="pipeline_info"
     // Pipeline options
     help = false
     fullHelp = false
+    // Full analysis
     all = false
+    // Only Evidential Gene run (one sample per run)
     onlyEvi = false
+    nameEvi = ""
+    // Only annotation analysis
     onlyAnn = false
+    // Only Assemblies and Evidential Gene
+    onlyAsm = false
     //Test data
     readsTest = null
     //short Transdecoder, no homlogy search PFAM and UniProt
-    shortTransdecoder = false 
+    shortTransdecoder = false
+    // Skip quality control
+    skipQC = false
+    // Skip fastp quality filter step
+    skipFilter = false
 }
+
+/*
+    Proceed to modify processes if needed. Choose the scheduler and options:
+        Executor = SLURM, PBS, etc.
+        Cluster Options = Partition, Nodes, Priority, etc.
+    If running locally leave the comments on "executor" and "clusterOptions".
+    For more info see the README and/or Nextflow documentation.
+*/
 
 process {
     withLabel: big_cpus {
-        cpus='30'
+        cpus='20'
         memory='15 GB'
-//        clusterOptions='-p lemmium --qos=normal'
-//        executor='slurm'
+        executor='slurm'
+        clusterOptions='-p lemmium --qos=normal'
+    }
+    withLabel: med_cpus {
+        cpus='8'
+        memory='15 GB'
+        executor='slurm'
+        clusterOptions='-p lemmium --qos=normal'
     }
     withLabel: low_cpus {
-        cpus='6'
-        memory='10 GB'
-//        clusterOptions='-p lemmium --qos=normal'
-//        executor='slurm'
+        cpus='4'
+        memory='15 GB'
+        executor='slurm'
+        clusterOptions='-p lemmium --qos=normal'
     }
     withLabel: big_mem {
         cpus='20'
         memory='350 GB'
-//        clusterOptions='-p lemmium --qos=normal'
-//        executor='slurm'
+        executor='slurm'
+        clusterOptions='-p lemmium --qos=normal'
     }
     withLabel: med_mem {
         cpus='20'
-        memory='180 GB'
-//        clusterOptions='-p lemmium --qos=normal'
-//        executor='slurm'
-    }
-    withLabel: med_mem2 {
-        cpus='16'
-        memory='93 GB'
-//        clusterOptions='-p nitrogen --qos=normal'
-//        executor='slurm'
+        //memory='250 GB'
+        memory={ 100.Gb + (task.attempt * 100.Gb)}
+        errorStrategy={ task.exitStatus in 137..140 ? 'retry' : 'finish' }
+        maxRetries = 2
+        executor='slurm'
+        clusterOptions='-p lemmium --qos=normal'
     }
     withLabel: low_mem {
         cpus='20'
         memory='80 GB'
-//        clusterOptions='-p lemmium --qos=normal'
-//        executor='slurm'
+        executor='slurm'
+        clusterOptions='-p lemmium --qos=normal'
     }
     errorStrategy='finish'
 }
@@ -121,19 +149,19 @@ env.evi="$baseDir/scripts/evigene"
 
 timeline {
   enabled = true
-  file = "${params.tracedir}/transpi_timeline.html"
+  file = "${params.outdir}/${params.tracedir}/transpi_timeline.html"
 }
 report {
   enabled = true
-  file = "${params.tracedir}/transpi_report.html"
+  file = "${params.outdir}/${params.tracedir}/transpi_report.html"
 }
 trace {
   enabled = true
-  file = "${params.tracedir}/transpi_trace.txt"
+  file = "${params.outdir}/${params.tracedir}/transpi_trace.txt"
 }
 dag {
   enabled = true
-  file = "${params.tracedir}/transpi_dag.html"
+  file = "${params.outdir}/${params.tracedir}/transpi_dag.html"
 }
 
 profiles {
