Add parameter for quality value

--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -91,6 +91,8 @@ params {
     skipQC = false
     // Skip fastp quality filter step
     skipFilter = false
+    // Minimum reads quality for filtering in fastp
+    minQual="25"
 }
 
 /*
