--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -126,22 +126,22 @@ process {
         cpus='20'
         memory='350 GB'
         executor='slurm'
-        clusterOptions='-p lemmium --qos=normal'
+        clusterOptions='-p lemmium --qos=low'
     }
     withLabel: med_mem {
         cpus='20'
         //memory='250 GB'
-        memory={ 100.Gb + (task.attempt * 100.Gb)}
+        memory={ 75.Gb + (task.attempt * 50.Gb)}
         errorStrategy={ task.exitStatus in 137..140 ? 'retry' : 'finish' }
         maxRetries = 2
         executor='slurm'
-        clusterOptions='-p lemmium --qos=normal'
+        clusterOptions='-p lemmium --qos=low'
     }
     withLabel: low_mem {
         cpus='20'
         memory='80 GB'
         executor='slurm'
-        clusterOptions='-p lemmium --qos=normal'
+        clusterOptions='-p lemmium --qos=low'
     }
     errorStrategy='finish'
 }
