--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -151,19 +151,19 @@ env.evi="$baseDir/scripts/evigene"
 
 timeline {
   enabled = true
-  file = "${params.mypwd}/${params.outdir}/${params.tracedir}/transpi_timeline.html"
+  file = "${params.outdir}/${params.tracedir}/transpi_timeline.html"
 }
 report {
   enabled = true
-  file = "${params.mypwd}/${params.outdir}/${params.tracedir}/transpi_report.html"
+  file = "${params.outdir}/${params.tracedir}/transpi_report.html"
 }
 trace {
   enabled = true
-  file = "${params.mypwd}/${params.outdir}/${params.tracedir}/transpi_trace.txt"
+  file = "${params.outdir}/${params.tracedir}/transpi_trace.txt"
 }
 dag {
   enabled = true
-  file = "${params.mypwd}/${params.outdir}/${params.tracedir}/transpi_dag.html"
+  file = "${params.outdir}/${params.tracedir}/transpi_dag.html"
 }
 
 profiles {
