Change structure and add variables

--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -11,6 +11,7 @@
 params {
 
     // -------------------------  EDIT below variables (mandatory)  ------------------------- //
+    // --------------------- Can also be specified in the command line ---------------------- //
 
     // Modify this accordingly (if needed)
     // kmers list (depends on read length!)
@@ -35,8 +36,22 @@ params {
 
     // --------------------------  EDIT below variables if needed  -------------------------- //
 
+    // PATH for rnammer, tmhmm, signalp programs. Require licenses
+    // RNAmmer Example: rnam="/home/ubuntu/rnammer/rnammer"
+    rnam
+    rnammer = false
+    // Tmhmm  Example: tmh="/home/ubuntu/tmhmm-2.0c/bin/tmhmm"
+    tmh
+    tmhmm = false
+    // SignalP Example: signalp="/home/ubuntu/signalp-4.1/signalp"
+    signalp
+    signalP = false
+
     // Directory for results
     outdir="results"
+    // Directory for trace files
+    tracedir="pipeline_info"
+
 
     /*
     // ------------------------------------     STOP     ------------------------------------ //
@@ -49,20 +64,12 @@ params {
     mypwd
     // Directory for reads
     reads=/reads/*_R{1,2}.fastq.gz"
-    // Directory for trace files
-    tracedir="pipeline_info"
     // Uniport database PATH
     uniprot
     uniname
     //BUSCO database
     busco3db
     busco4db
-    //RNAmmer
-    rnam
-    //Tmhmm
-    tmhmm
-    //SignalP
-    signalp
     //PFAM file location
     pfloc
     //name of pfam file
@@ -78,9 +85,15 @@ params {
     all = false
     // Only Evidential Gene run (one sample per run)
     onlyEvi = false
-    nameEvi = ""
     // Only annotation analysis
     onlyAnn = false
+    // Annotation options
+    // SignalP
+    signalP = false
+    // tmHMM
+    tmhmm = false
+    // rnammer
+    rnammer = false
     // Only Assemblies and Evidential Gene
     onlyAsm = false
     //Test data
@@ -129,9 +142,9 @@ process {
         clusterOptions='-p lemmium --qos=low'
     }
     withLabel: med_mem {
-        cpus='20'
+        cpus='15'
         //memory='250 GB'
-        memory={ 75.Gb + (task.attempt * 50.Gb)}
+        memory={ 100.Gb + (task.attempt * 50.Gb)}
         errorStrategy={ task.exitStatus in 137..140 ? 'retry' : 'finish' }
         maxRetries = 2
         executor='slurm'
