--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -39,13 +39,10 @@ params {
     // PATH for rnammer, tmhmm, signalp programs. Require licenses
     // RNAmmer Example: rnam="/home/ubuntu/rnammer/rnammer"
     rnam
-    rnammer = false
     // Tmhmm  Example: tmh="/home/ubuntu/tmhmm-2.0c/bin/tmhmm"
-    tmh
-    tmhmm = false
+    tmhmm
     // SignalP Example: signalp="/home/ubuntu/signalp-4.1/signalp"
     signalp
-    signalP = false
 
     // Directory for results
     outdir="results"
@@ -89,11 +86,11 @@ params {
     onlyAnn = false
     // Annotation options
     // SignalP
-    signalP = false
+    withSignalP = false
     // tmHMM
-    tmhmm = false
+    withTMHMM = false
     // rnammer
-    rnammer = false
+    withRnammer = false
     // Only Assemblies and Evidential Gene
     onlyAsm = false
     //Test data
