--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -37,11 +37,11 @@ params {
     // --------------------------  EDIT below variables if needed  -------------------------- //
 
     // PATH for rnammer, tmhmm, signalp programs. Require licenses
-        // RNAmmer Example: rnam="/home/ubuntu/rnammer/rnammer"
+        // RNAmmer
             rnam
-        // Tmhmm  Example: tmh="/home/ubuntu/tmhmm-2.0c/bin/tmhmm"
+        // Tmhmm
             tmhmm
-        // SignalP Example: signalp="/home/ubuntu/signalp-4.1/signalp"
+        // SignalP
             signalp
 
     // Directory for results
