Add filter species variables

--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -120,6 +120,15 @@ params {
         skipFilter = false
     // Minimum reads quality for filtering in fastp
         minQual="25"
+
+    // Filter Species
+    // Psytrans value to train model
+        psyval=160
+    // Host Sequence
+        host=""
+    // Symbiont Sequence
+        symbiont=""
+
 }
 
 /*
@@ -131,29 +140,28 @@ params {
 */
 
 process {
+    executor='slurm'
+    clusterOptions='-p lemmium --qos=low'
+    cpus='1'
+    memory='5 GB'
     withLabel: big_cpus {
         cpus='20'
         memory='15 GB'
-        executor='slurm'
         clusterOptions='-p lemmium --qos=normal'
     }
     withLabel: med_cpus {
         cpus='8'
         memory='15 GB'
-        executor='slurm'
         clusterOptions='-p lemmium --qos=normal'
     }
     withLabel: low_cpus {
         cpus='4'
         memory='15 GB'
-        executor='slurm'
         clusterOptions='-p lemmium --qos=normal'
     }
     withLabel: big_mem {
         cpus='20'
         memory='350 GB'
-        executor='slurm'
-        clusterOptions='-p lemmium --qos=low'
     }
     withLabel: med_mem {
         cpus='15'
@@ -161,16 +169,23 @@ process {
         memory={ 100.Gb + (task.attempt * 50.Gb)}
         errorStrategy={ task.exitStatus in 137..140 ? 'retry' : 'finish' }
         maxRetries = 2
-        executor='slurm'
-        clusterOptions='-p lemmium --qos=low'
     }
     withLabel: low_mem {
         cpus='20'
         memory='80 GB'
-        executor='slurm'
-        clusterOptions='-p lemmium --qos=low'
     }
     errorStrategy='finish'
+}
+
+executor {
+  $slurm {
+    queueSize=100
+  }
+
+  $local {
+    cpus='8'
+    memory='32 GB'
+  }
 }
 
 // env Evidential Gene variable (only for nextflow)
