--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -19,20 +19,20 @@ params {
 
         // SOAP config file generator
             //#maximal read length
-            max_rd_len=""
+                max_rd_len=""
             //[LIB]
             //#maximal read length in this lib
-            rd_len_cutof=""
+                rd_len_cutof=""
 
             // Other options if needed. Leave defaults if unsure.
             //#average insert size
             //avg_ins="200"
             //#if sequence needs to be reversed
-            reverse_seq="0"
+                reverse_seq="0"
             //#in which part(s) the reads are used
-            asm_flags="3"
+                asm_flags="3"
             //#minimum aligned length to contigs for a reliable read location (at least 32 for short insert size)
-            map_len="32"
+                map_len="32"
 
     // --------------------------  EDIT below variables if needed  -------------------------- //
 
@@ -63,7 +63,7 @@ params {
     // Directory for reads
         reads=/reads/*_R{1,2}.fastq.gz"
 
-    // Uniport database PATH
+    // Uniprot database PATH
         uniprot
         uniname
 
@@ -129,6 +129,8 @@ params {
     // Symbiont Sequence
         symbiont=""
 
+    // Skip Report
+        skipReport = false
 }
 
 /*
