Add rescue busco paramater. Add exlow_cpus option

--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -129,6 +129,10 @@ params {
     // Symbiont Sequence
         symbiont=""
 
+    // Rescue BUSCO options
+    // Mininmum percentage of assemblers require to rescue a BUSCO sequence
+        minPerc="0.7"
+
     // Skip Report
         skipReport = false
 }
@@ -159,6 +163,11 @@ process {
     withLabel: low_cpus {
         cpus='4'
         memory='15 GB'
+        clusterOptions='-p lemmium --qos=normal'
+    }
+    withLabel: exlow_cpus {
+        cpus='1'
+        memory='2 GB'
         clusterOptions='-p lemmium --qos=normal'
     }
     withLabel: big_mem {
