Add new busco parameters

--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -129,7 +129,12 @@ params {
     // Symbiont Sequence
         symbiont=""
 
+    // Run BUSCO in all assemblies
+        allBuscos = false
+
     // Rescue BUSCO options
+        rescueBusco = false
+
     // Mininmum percentage of assemblers require to rescue a BUSCO sequence
         minPerc="0.7"
 
