Add skipEvi and filter species option

--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -106,6 +106,8 @@ params {
 
     // Only Assemblies and Evidential Gene
         onlyAsm = false
+    // Skip Evidential Gene for onlyAsm option
+        skipEvi = false
 
     //Test data
         readsTest = null
@@ -121,7 +123,8 @@ params {
     // Minimum reads quality for filtering in fastp
         minQual="25"
 
-    // Filter Species
+    // Filter Species using psytrans
+        filterSpecies = false
     // Psytrans value to train model
         psyval=160
     // Host Sequence
