Change option name

--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -135,8 +135,9 @@ params {
     // Run BUSCO in all assemblies
         allBuscos = false
 
-    // Rescue BUSCO options
-        rescueBusco = false
+    // BUSCO distribution analysis (this option needs to be run together with the allBuscos option)
+        // Generate the analysis
+        buscoDist = false
 
     // Mininmum percentage of assemblers require to rescue a BUSCO sequence
         minPerc="0.7"
