Change max read length name. Add manifest.

--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -2,10 +2,10 @@
 ================================================================================================
                                     Config File TransPi
 ================================================================================================
-                                Transcriptome Analysis Pipeline
-                                Author: Ramon E. Rivera-Vicens
-                                Version: 1.0
-------------------------------------------------------------------------------------------------
+                            Transcriptome Analysis Pipeline
+                            Author: Ramón E. Rivera-Vicéns
+                            GitHub: rivera10
+----------------------------------------------------------------------------------------
 */
 
 params {
@@ -19,10 +19,10 @@ params {
 
         // SOAP config file generator
             //#maximal read length
-                max_rd_len=""
+                maxReadLen=""
             //[LIB]
             //#maximal read length in this lib
-                rd_len_cutof=""
+                rd_len_cutof="${params.maxReadLen}"
 
             // Other options if needed. Leave defaults if unsure.
             //#average insert size
@@ -36,19 +36,19 @@ params {
 
     // --------------------------  EDIT below variables if needed  -------------------------- //
 
-    // PATH for rnammer, tmhmm, signalp programs. Require licenses
+    // Directory for results
+        outdir="results"
+
+    // Directory for trace files
+        tracedir="pipeline_info"
+
+    // PATH for rnammer, tmhmm, signalp programs. Requires licenses. See CBS-DTU tools for information.
         // RNAmmer
             rnam
         // Tmhmm
             tmhmm
         // SignalP
             signalp
-
-    // Directory for results
-        outdir="results"
-
-    // Directory for trace files
-        tracedir="pipeline_info"
 
     /*
     // ------------------------------------     STOP     ------------------------------------ //
@@ -61,7 +61,7 @@ params {
         mypwd
 
     // Directory for reads
-        reads=/reads/*_R{1,2}.fastq.gz"
+        reads=""
 
     // Uniprot database PATH
         uniprot
@@ -110,7 +110,7 @@ params {
         skipEvi = false
 
     //Test data
-        readsTest = null
+        readsTest = false
 
     //short Transdecoder, no homlogy search PFAM and UniProt
         shortTransdecoder = false
@@ -162,22 +162,18 @@ process {
     withLabel: big_cpus {
         cpus='20'
         memory='15 GB'
-        clusterOptions='-p lemmium --qos=normal'
     }
     withLabel: med_cpus {
         cpus='8'
         memory='15 GB'
-        clusterOptions='-p lemmium --qos=normal'
     }
     withLabel: low_cpus {
         cpus='4'
         memory='15 GB'
-        clusterOptions='-p lemmium --qos=normal'
     }
     withLabel: exlow_cpus {
         cpus='1'
         memory='2 GB'
-        clusterOptions='-p lemmium --qos=normal'
     }
     withLabel: big_mem {
         cpus='20'
@@ -242,4 +238,13 @@ profiles {
     test {
         includeConfig 'conf/test.config'
     }
+}
+
+manifest {
+    name = 'TransPi'
+    author = 'Ramón E. Rivera-Vicéns'
+    description = 'Transcriptome Analysis Pipeline'
+    mainScript = 'TransPi.nf'
+    nextflowVersion = '>=20.06.0'
+    version = '1.0'
 }
