Change mypwd to pipeInstall

--- a/template.nextflow.config
+++ b/template.nextflow.config
@@ -57,8 +57,8 @@ params {
     // -------------------------------        If nedded       ------------------------------- //
     */
 
-    // PATH to run analysis
-        mypwd
+    // PATH to TransPi installation
+        pipeInstall
 
     // Directory for reads
         reads=""
