Fix name. Remove version tag

--- a/conf/test.config
+++ b/conf/test.config
@@ -2,12 +2,11 @@
 ========================================================================================
                                 Test Config File TransPi
 ========================================================================================
-                            Transcriptomes Analysis Pipeline
-                            Author: Ramon E. Rivera-Vicens
-                            Version: 1.0 (dev)
+                            Transcriptome Analysis Pipeline
+                            Author: Ramón E. Rivera-Vicéns
 ----------------------------------------------------------------------------------------
 */
- 
+
 params {
 
     cpus='4'
